<?xml version="1.0"?>
<package format="3">
  <name>ekf_localization</name>
  <version>0.1.0</version>
  <description>EKF sensor fusion for robot localization</description>
  <maintainer email="you@email.com">Thiago</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
